--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,12 @@
 {
-    "name": "Poet's App Scaffold",
-    "short_name": "Poet's App Scaffold",
-    "theme_color": "#fcfaf6",
-    "background_color": "#fcfaf6",
+    "name": "Transfer Agent Protocol",
+    "short_name": "TAP",
+    "theme_color": "#0C0B0C",
+    "background_color": "#FCFAF6",
     "display": "standalone",
     "orientation": "portrait",
     "scope": "/",
-    "start_url": "https://poet.network",
+    "start_url": "https://transferagentprotocol.xyz",
     "icons": [
         {
             "src": "icons/android-chrome-192x192.png",
