--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "next-sitemap": "^4.0.6",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-gtm-module": "^2.0.11",
         "react-is": "^18.2.0",
         "styled-components": "^5.3.9"
     },
